# decafCompiler

./: .gitignore  CMakeLists.txt  README.md
cmake/: Antlr4Package.md  ExternalAntlr4Cpp.cmake  README.md
grammar/: Decaf.g4  DecafLexer.g4
include/: MyDecafVisitor.h
src/: CMakeLists.txt  MyDecafVisitor.cpp  main.cpp
